# mnemosyne

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMMIT_FORMAT.md  Cargo.toml  README.ko.md  README.md  RULEBOOK.md  mnemosyne.toml
bench/: .gitignore  Cargo.toml
bench/crates/audit-broadcast-bench/: Cargo.toml
bench/crates/cascade-measurement/: Cargo.toml
bench/crates/closure-measurement/: Cargo.toml
bench/crates/codegen-prototype/: Cargo.toml
bench/crates/direct-impl/: Cargo.toml
bench/crates/lmdb-baseline/: Cargo.toml
bench/crates/schema-bench/: Cargo.toml
bench/crates/sled-baseline/: Cargo.toml
bench/crates/workload-gen/: Cargo.toml
bench/crates/xtdb-baseline/: Cargo.toml
crates/mnemosyne-atomic/: Cargo.toml
crates/mnemosyne-atomic/src/: lib.rs  project.rs  redact.rs
crates/mnemosyne-atomic/tests/: atomic_round_trip.rs  atomic_store_view_parity.rs
crates/mnemosyne-cascade/: Cargo.toml
crates/mnemosyne-cascade/src/: fine_grained.rs  lib.rs  metadata.rs  result.rs  runtime.rs  snapshot.rs  spec.rs
crates/mnemosyne-cascade/tests/: cascade_query_smoke.rs  phase_1_5_measurement.rs
crates/mnemosyne-cli/: Cargo.toml  build.rs
crates/mnemosyne-cli/src/: atomic_cli.rs  lib.rs  main.rs
crates/mnemosyne-cli/tests/: add_confirmation_event_smoke.rs  append_changelog_entry_smoke.rs  atomic_first_validate_smoke.rs  authorial_revision_smoke.rs  blanket_verifies_smoke.rs  cascade_auto_update_smoke.rs  commit_ledger_gate_smoke.rs  docs_match_reality_smoke.rs  drift_smoke.rs  edge_cost_smoke.rs  edge_guard_smoke.rs  entity_dossier_smoke.rs  entity_kind_hierarchy_smoke.rs  external_fixtures_integration.rs  fact_count_smoke.rs  fact_ref_smoke.rs  generate_docs_smoke.rs  generated_vs_legacy_audit.rs  help_covers_dispatch_smoke.rs  help_registry_smoke.rs  import_epub_anchors_smoke.rs  import_epub_excerpts_smoke.rs  import_facts_smoke.rs  import_sections_smoke.rs  mutate_error_output_smoke.rs  parameter_economy_smoke.rs  phase_1_priority_audit.rs  predicate_endpoint_kind_smoke.rs  quantity_unit_smoke.rs  query_subcommand_smoke.rs  r280_atomic_path_config_smoke.rs  r286_version_smoke.rs  remaining_mutate_primitives_smoke.rs  report_confirmation_smoke.rs  report_coverage_smoke.rs  report_frame_view_smoke.rs  report_payoff_coverage_smoke.rs  report_playthrough_manuscript_smoke.rs  report_spec_map_smoke.rs  seal_excerpt_hashes_smoke.rs  (+11 more)
crates/mnemosyne-config/: Cargo.toml
crates/mnemosyne-config/src/: lib.rs
crates/mnemosyne-core/: Cargo.toml
crates/mnemosyne-core/src/: content_anchor.rs  emit.rs  fact.rs  facts.rs  fixture.rs  lib.rs  narrative.rs  persist.rs  scene.rs  schema.rs  section_ref.rs
crates/mnemosyne-core/tests/: entity_persist.rs  transport_parity.rs
crates/mnemosyne-engine/: Cargo.toml
crates/mnemosyne-engine/src/: gate.rs  lib.rs  overrides.rs  projection.rs  prose.rs  quest.rs  test_support.rs  types.rs
crates/mnemosyne-facts/: Cargo.toml
crates/mnemosyne-facts/src/: canonical.rs  emit.rs  facts.rs  fixture.rs  lib.rs  persist.rs  schema.rs
crates/mnemosyne-facts/tests/: entity_persist.rs
crates/mnemosyne-index/: Cargo.toml
crates/mnemosyne-index/src/: lib.rs  main.rs
crates/mnemosyne-mcp/: Cargo.toml  build.rs
crates/mnemosyne-mcp/resources/: anti-patterns.md  atomic-store.md  frozen-ledger.md  overview.md  schema-guide.md  tier-rules.md  workflow.md
crates/mnemosyne-mcp/src/: cli.rs  main.rs  resources.rs
crates/mnemosyne-ops/: Cargo.toml
crates/mnemosyne-ops/src/: cascade.rs  docs.rs  lib.rs  query.rs  style.rs  validate.rs
crates/mnemosyne-parser/: Cargo.toml
crates/mnemosyne-parser/src/: emitter.rs  lib.rs
crates/mnemosyne-parser/tests/: changelog_pattern_plugin.rs  schema_as_input_integration.rs
crates/mnemosyne-plugin/: Cargo.toml
crates/mnemosyne-plugin-tree-sitter-cpp/: Cargo.toml
crates/mnemosyne-plugin-tree-sitter-cpp/src/: lib.rs
crates/mnemosyne-plugin-tree-sitter-rust/: Cargo.toml
crates/mnemosyne-plugin-tree-sitter-rust/src/: lib.rs
crates/mnemosyne-plugin/src/: lib.rs
crates/mnemosyne-plugin/tests/: transport_parity.rs
crates/mnemosyne-projection/: Cargo.toml
crates/mnemosyne-projection/src/: lib.rs  render.rs
crates/mnemosyne-query/: Cargo.toml
crates/mnemosyne-query/src/: lib.rs  render.rs
crates/mnemosyne-render/: Cargo.toml
crates/mnemosyne-render/src/: lib.rs  main.rs
crates/mnemosyne-server/: Cargo.toml  build.rs
crates/mnemosyne-server/proto/: mnemosyne.proto
crates/mnemosyne-server/src/: audit.rs  error.rs  gate.rs  grpc.rs  handler.rs  lib.rs  proposal.rs  service.rs
crates/mnemosyne-server/tests/: grpc_audit_cross_process_smoke.rs  grpc_audit_live_tail_smoke.rs  grpc_audit_resume_protocol_smoke.rs  grpc_audit_streaming_smoke.rs  grpc_audit_subscriber_filter_smoke.rs  grpc_batch_atomic_smoke.rs  grpc_client_lb_smoke.rs  grpc_health_smoke.rs  grpc_metadata_auth_smoke.rs  grpc_mtls_smoke.rs  grpc_otlp_collector_e2e.rs  grpc_otlp_config_smoke.rs  grpc_otlp_sampling_zero_smoke.rs  grpc_otlp_smoke.rs  grpc_reflection_smoke.rs  grpc_smoke.rs  grpc_streaming_smoke.rs  grpc_tls_smoke.rs  grpc_trace_id_smoke.rs  grpc_tracestate_smoke.rs  handler_span_hierarchy_smoke.rs  proposal_pipeline.rs
crates/mnemosyne-store/: Cargo.toml
crates/mnemosyne-store/src/: cf_layout.rs  error.rs  key_codec.rs  lib.rs  migration.rs  store.rs
crates/mnemosyne-store/tests/: cf_layout_smoke.rs
crates/mnemosyne-style/: Cargo.toml
crates/mnemosyne-style/src/: lib.rs
crates/mnemosyne-style/tests/: style_audit_full_scale.rs  style_config_integration.rs  style_full_scale.rs  style_re_audit_full_scale.rs  style_redesign_smoke.rs  style_smoke.rs
crates/mnemosyne-validate/: Cargo.toml
crates/mnemosyne-validate/src/: code_refs.rs  confirmation.rs  content_drift.rs  continuity.rs  disclosure.rs  drift.rs  lib.rs  map.rs  schema.rs  spec_drift.rs  t2.rs  (+3 more)
crates/mnemosyne-validator/: Cargo.toml
crates/mnemosyne-workspace/: Cargo.toml
studio/: Cargo.toml  app.pinion.xml  build.rs
studio/src/: main.rs
studio/tools/: rpc.py
tools/experiment-harness/: Cargo.toml  README.md
(+640 files in other folders)
