[workspace]
resolver = "2"
members = [
 "crates/workload-gen",
 "crates/direct-impl",
 "crates/schema-bench",
 "crates/xtdb-baseline",
 "crates/sled-baseline",
 "crates/lmdb-baseline",
 "crates/codegen-prototype",
 "crates/closure-measurement",
 "crates/audit-broadcast-bench",
]

[workspace.package]
edition = "2021"
rust-version = "1.94"
publish = false
license = "MIT OR Apache-2.0"

[workspace.dependencies]
workload-gen = { path = "crates/workload-gen" }

rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
bincode = "1"

clap = { version = "4", features = ["derive"] }

anyhow = "1"
thiserror = "1"

byteorder = "1"
bytes = "1"

criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

rocksdb = "0.24"
sled = "0.34"
heed = "0.20"
tempfile = "3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

salsa = "0.26"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
