[package]
name = "mnemosyne-atomic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
sha2.workspace = true
# Round 690 — OPTIONAL, off by default (see mnemosyne-core). The `schemars`
# feature derives JsonSchema on the manifest / import DTOs and forwards to
# core's, so the MCP surface types the whole FactsManifest from the one source.
schemars = { workspace = true, optional = true }

[features]
schemars = ["dep:schemars", "mnemosyne-core/schemars"]

[dev-dependencies]
tempfile.workspace = true
# Round 694 — TEST-ONLY. `EnumIter` makes `FactRefFacet` compiler-complete: the
# completeness tests iterate every variant, so a new variant that is not added
# to `fact_registry_refs` + both parity case lists fails, with no hand-list to
# forget (DEBT-FACET-ALL-UNFORCED). Not in the production dependency graph.
strum = { version = "0.26", features = ["derive"] }

[lints]
workspace = true
