[package]
name = "mnemosyne-cascade"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mnemosyne-facts = { path = "../mnemosyne-facts" }

salsa.workspace = true

[dev-dependencies]
salsa.workspace = true

[lints]
workspace = true
