[package]
name = "mnemosyne-cascade"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Layer-0 canonical fact structs (SectionFact / ChangelogEntryFact /
# CrossRefFact / FrozenListFact + DecisionStatus / FactKey / SectionSkeleton).
# cascade is a pure in-memory Salsa engine: it consumes the structs only, never
# the RocksDB-coupled persistence binding in `mnemosyne-facts`. Depending on
# `core` (not `facts`) keeps the engine — and its read-side projection host —
# RocksDB-free at link time (CQRS invariant, ARCHITECTURE.md sections 4-5).
mnemosyne-core = { path = "../mnemosyne-core" }

salsa.workspace = true

[dev-dependencies]
salsa.workspace = true

[lints]
workspace = true
