[package]
name = "mnemosyne-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Mnemosyne — markdown spec/doc management infrastructure for LLM-using codebases (CLI for the reference application + generic library)"
keywords = ["markdown", "spec", "documentation", "llm", "validator"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mnemosyne-cli"
path = "src/main.rs"

[dependencies]
mnemosyne-validate = { path = "../mnemosyne-validate" }
mnemosyne-server = { path = "../mnemosyne-server" }
mnemosyne-store = { path = "../mnemosyne-store" }
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-schema = { path = "../mnemosyne-schema" }
mnemosyne-config = { path = "../mnemosyne-config" }
mnemosyne-parser = { path = "../mnemosyne-parser" }
mnemosyne-atomic = { path = "../mnemosyne-atomic" }
mnemosyne-workspace = { path = "../mnemosyne-workspace" }
mnemosyne-style = { path = "../mnemosyne-style" }
mnemosyne-query = { path = "../mnemosyne-query" }
mnemosyne-plugin-tree-sitter-rust = { path = "../mnemosyne-plugin-tree-sitter-rust" }

anyhow.workspace = true
sha2.workspace = true
# Round 120 — query subcommand JSON envelope output in serde_json (Claude
# consumable shape, Round 117 §15 body registered carry).
serde_json.workspace = true
# Round 293 — commit↔ledger drift gate parses commit subjects ("(R<N>)" /
# "(Round <N>)") and atomic ledger entry-id keys via a small fixed pattern set.
regex.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
