[package]
name = "mnemosyne-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "mnemosyne_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
# Round 690 — OPTIONAL, off by default. `schemars` is serde's schema sibling
# (the same category as serde, already mandatory here); L0 core stays zero
# MANDATORY-dep. Only the `schemars` feature — enabled solely by mnemosyne-mcp —
# pulls it, so a fact/typed-claim DTO exposes a real JSON Schema from the one type.
schemars = { workspace = true, optional = true }

[features]
schemars = ["dep:schemars"]

[dev-dependencies]
toml.workspace = true

[lints]
workspace = true
