[package]
name = "mnemosyne-facts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-store = { path = "../mnemosyne-store" }

thiserror.workspace = true
byteorder.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
