[package]
name = "mnemosyne-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "mnemosyne-mcp"
path = "src/main.rs"

[dependencies]
mnemosyne-ops = { path = "../mnemosyne-ops" }
mnemosyne-atomic = { path = "../mnemosyne-atomic" }
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-projection = { path = "../mnemosyne-projection" }
rmcp = { version = "2", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
