[package]
name = "mnemosyne-ops"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Mnemosyne — shared in-process orchestration (atomic mutate + query + validate + cascade) consumed by the CLI and MCP binaries"

[dependencies]
mnemosyne-atomic = { path = "../mnemosyne-atomic" }
mnemosyne-config = { path = "../mnemosyne-config" }
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-query = { path = "../mnemosyne-query" }
mnemosyne-style = { path = "../mnemosyne-style" }
mnemosyne-validate = { path = "../mnemosyne-validate" }

anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
