[package]
name = "mnemosyne-parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-schema = { path = "../mnemosyne-schema" }
mnemosyne-config = { path = "../mnemosyne-config" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
