[package]
name = "mnemosyne-projection"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mnemosyne-atomic = { path = "../mnemosyne-atomic" }
mnemosyne-cascade = { path = "../mnemosyne-cascade" }

[dev-dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }

[lints]
workspace = true
