[package]
name = "mnemosyne-query"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-schema = { path = "../mnemosyne-schema" }
mnemosyne-atomic = { path = "../mnemosyne-atomic" }
mnemosyne-workspace = { path = "../mnemosyne-workspace" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
mnemosyne-parser = { path = "../mnemosyne-parser" }

[lints]
workspace = true
