[package]
name = "mnemosyne-render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mnemosyne-render"
path = "src/main.rs"

[dependencies]
mnemosyne-engine = { path = "../mnemosyne-engine" }

[dev-dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-validate = { path = "../mnemosyne-validate" }

[lints]
workspace = true
