[package]
name = "mnemosyne-style"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mnemosyne-schema = { path = "../mnemosyne-schema" }
mnemosyne-config = { path = "../mnemosyne-config" }
mnemosyne-atomic = { path = "../mnemosyne-atomic" }
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-parser = { path = "../mnemosyne-parser" }
mnemosyne-workspace = { path = "../mnemosyne-workspace" }

[lints]
workspace = true
