[package]
name = "mnemosyne-validate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-schema = { path = "../mnemosyne-schema" }
mnemosyne-config = { path = "../mnemosyne-config" }
mnemosyne-atomic = { path = "../mnemosyne-atomic" }
mnemosyne-workspace = { path = "../mnemosyne-workspace" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
mnemosyne-parser = { path = "../mnemosyne-parser" }
mnemosyne-plugin-tree-sitter-rust = { path = "../mnemosyne-plugin-tree-sitter-rust" }

[lints]
workspace = true
