[package]
name = "mnemosyne-validator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Mnemosyne validator — markdown spec/doc T1+T2+T3 validator and workspace config loader for LLM-using codebases"
keywords = ["markdown", "spec", "validator", "llm", "documentation"]
categories = ["development-tools", "parser-implementations"]

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
tera.workspace = true
regex.workspace = true
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-schema = { path = "../mnemosyne-schema" }
mnemosyne-config = { path = "../mnemosyne-config" }
mnemosyne-parser = { path = "../mnemosyne-parser" }
mnemosyne-atomic = { path = "../mnemosyne-atomic" }

[dev-dependencies]
tempfile = { workspace = true }
serde_json.workspace = true
mnemosyne-plugin-tree-sitter-rust = { path = "../mnemosyne-plugin-tree-sitter-rust" }
mnemosyne-schema = { path = "../mnemosyne-schema" }
mnemosyne-config = { path = "../mnemosyne-config" }
mnemosyne-parser = { path = "../mnemosyne-parser" }
mnemosyne-atomic = { path = "../mnemosyne-atomic" }

[lints]
workspace = true
