[package]
name = "mnemosyne-workspace"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mnemosyne-schema = { path = "../mnemosyne-schema" }
mnemosyne-config = { path = "../mnemosyne-config" }

[dev-dependencies]
tempfile.workspace = true
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-parser = { path = "../mnemosyne-parser" }
mnemosyne-validate = { path = "../mnemosyne-validate" }

[lints]
workspace = true
